<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/round_block_24"
        android:key="@string/pref_key_manage_blocked"
        android:title="@string/pref_title_manage_blocked" />

    <Preference
        android:key="@string/pref_key_color"
        android:title="@string/pref_title_app_color" />

    <SwitchPreference
        android:defaultValue="@bool/pref_default_value_compact"
        android:key="@string/pref_key_compact"
        android:title="@string/pref_title_compact" />

    <SwitchPreference
        android:defaultValue="@bool/pref_default_value_animations"
        android:key="@string/pref_key_animations"
        android:title="@string/pref_title_animations" />

    <SwitchPreference
        android:defaultValue="@bool/pref_default_value_records_enabled"
        android:key="@string/pref_key_records_enabled"
        android:title="@string/pref_title_records_enabled"
        app:isPreferenceVisible="false" />

    <SwitchPreference
        android:defaultValue="@bool/pref_default_value_should_ask_sim"
        android:key="@string/pref_key_ask_sim"
        android:title="@string/pref_title_ask_sim" />

    <ListPreference
        android:defaultValue="@string/pref_value_page_default"
        android:entries="@array/pages"
        android:entryValues="@array/pagesValues"
        android:icon="@drawable/round_view_carousel_24"
        android:key="@string/pref_key_default_page"
        app:title="@string/pref_title_default_page" />

    <Preference
        android:key="@string/pref_key_report_bugs"
        android:title="@string/pref_title_report_bugs" />

    <Preference
        android:key="@string/pref_key_rate"
        android:title="@string/pref_title_rate" />
</PreferenceScreen>