<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:icon="@drawable/round_block_24"
        android:key="@string/pref_key_manage_blocked"
        android:title="@string/pref_title_manage_blocked" />

    <Preference
        android:icon="@drawable/ic_invert_colors_black_24dp"
        android:key="@string/pref_key_color"
        android:title="@string/pref_title_app_color" />

    <SwitchPreference
        android:defaultValue="@bool/pref_default_value_compact"
        android:icon="@drawable/ic_view_compact_black_24dp"
        android:key="@string/pref_key_compact"
        android:title="@string/pref_title_compact" />

    <SwitchPreference
        android:defaultValue="@bool/pref_default_value_animations"
        android:icon="@drawable/ic_animation_black_24dp"
        android:key="@string/pref_key_animations"
        android:title="@string/pref_title_animations" />

    <SwitchPreference
        android:defaultValue="@bool/pref_default_value_records_enabled"
        android:icon="@drawable/ic_radio_button_checked_black_24dp"
        android:key="@string/pref_key_records_enabled"
        android:title="@string/pref_title_records_enabled"
        app:isPreferenceVisible="false" />

    <SwitchPreference
        android:defaultValue="@bool/pref_default_value_scroll_indicator"
        android:icon="@drawable/round_sort_by_alpha_24"
        android:key="@string/pref_key_scroll_indicator"
        android:title="@string/pref_title_scroll_indicator" />

    <ListPreference
        android:defaultValue="@string/pref_value_page_default"
        android:entries="@array/pages"
        android:entryValues="@array/pagesValues"
        android:icon="@drawable/round_view_carousel_24"
        android:key="@string/pref_key_default_page"
        app:title="@string/pref_title_default_page" />

    <ListPreference
        android:defaultValue="@string/pref_default_value_sim_select"
        android:enabled="false"
        android:icon="@drawable/ic_sim_card_black_24dp"
        android:key="@string/pref_key_sim_select"
        android:title="@string/pref_title_sim_select" />

    <Preference
        android:icon="@drawable/ic_bug_report_black_24dp"
        android:key="@string/pref_key_report_bugs"
        android:title="@string/pref_title_report_bugs" />

    <Preference
        android:icon="@drawable/ic_star_black_24dp"
        android:key="@string/pref_key_rate"
        android:title="@string/pref_title_rate" />

    <Preference
        android:icon="@drawable/ic_stars_black_24dp"
        android:key="@string/pref_key_donate"
        android:title="@string/pref_title_donate" />

    <Preference
        android:icon="@drawable/ic_email_black_24dp"
        android:key="@string/pref_key_email"
        android:title="@string/pref_title_email" />
</PreferenceScreen>