<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Call.Layout"
    tools:context=".ui.call.OngoingCallActivity">

    <!-- call timer -->
    <TextView
        android:id="@+id/call_time_text"
        style="@style/Call.Text.Time"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="00:00" />

    <!-- call status -->
    <TextView
        android:id="@+id/call_status_text"
        style="@style/Call.Text.Status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_time_text"
        tools:text="@string/status_call_incoming" />

    <!-- caller image -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/call_image"
        style="@style/Call.Image"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/call_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/call_name_text"
        tools:src="@drawable/ic_account_circle_black_24dp" />

    <!-- caller name -->
    <TextView
        android:id="@+id/call_name_text"
        style="@style/Call.Text.Name"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="John Baba"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_status_text"
        tools:text="Jesus" />

    <!-- eye level guideline -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_eye_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TableLayout
        android:id="@+id/call_actions_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/answer_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow>
            <!-- action hold -->
            <TextView
                android:id="@+id/call_action_hold"
                style="@style/Call.Button.Action"
                android:layout_weight="1"
                android:text="@string/call_action_hold"
                app:drawableTopCompat="@drawable/ic_pause_black_24dp" />

            <!-- action mute -->
            <TextView
                android:id="@+id/call_action_mute"
                style="@style/Call.Button.Action"
                android:layout_weight="1"
                android:text="@string/call_action_mute"
                app:drawableTopCompat="@drawable/ic_mic_off_black_24dp" />

            <!-- action speaker -->
            <TextView
                android:id="@+id/call_action_speaker"
                style="@style/Call.Button.Action"
                android:layout_weight="1"
                android:text="@string/call_action_speaker"
                app:drawableTopCompat="@drawable/ic_volume_up_black_24dp" />
        </TableRow>

        <TableRow>
            <!-- action record -->
            <TextView
                android:id="@+id/call_action_record"
                style="@style/Call.Button.Action"
                android:layout_weight="1"
                android:text="@string/call_action_record"
                app:drawableTopCompat="@drawable/ic_radio_button_checked_black_24dp" />

            <!-- action keypad -->
            <TextView
                android:id="@+id/call_action_keypad"
                style="@style/Call.Button.Action"
                android:layout_weight="1"
                android:text="@string/call_action_keypad"
                app:drawableTopCompat="@drawable/ic_dialpad_black_24dp" />

            <!-- action add call -->
            <TextView
                android:id="@+id/call_action_add_call"
                style="@style/Call.Button.Action"
                android:layout_weight="1"
                android:text="@string/call_action_add_call"
                app:drawableTopCompat="@drawable/ic_add_black_24dp" />
        </TableRow>
    </TableLayout>

    <!-- Answer Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/answer_btn"
        style="@style/Call.Button.Bottom"
        android:layout_margin="24dp"
        android:backgroundTint="@color/green_phone"
        android:src="@drawable/ic_call_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Reject Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reject_btn"
        style="@style/Call.Button.Bottom"
        android:layout_margin="24dp"
        android:backgroundTint="@color/red_phone"
        android:src="@drawable/ic_call_end_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>