<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/prompt_title"
        style="@style/Koler.Text.Headline3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_spacing"
        android:text="@string/prompt_are_you_sure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/prompt_subtitle"
        style="@style/Koler.Text.Subtitle2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="@dimen/default_spacing_small"
        android:layout_marginEnd="@dimen/default_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/prompt_title"
        app:layout_constraintTop_toBottomOf="@id/prompt_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/prompt_button_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_spacing"
        android:layout_marginTop="@dimen/default_spacing"
        android:layout_marginEnd="@dimen/default_spacing_half"
        android:layout_marginBottom="@dimen/default_spacing"
        android:background="@drawable/bubble_background"
        android:backgroundTint="?colorOnSecondary"
        android:elevation="0dp"
        android:fontFamily="@font/google_sans_bold"
        android:stateListAnimator="@null"
        android:text="@string/action_yes"
        android:textColor="?colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/prompt_button_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prompt_subtitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/prompt_button_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_spacing_half"
        android:layout_marginTop="@dimen/default_spacing"
        android:layout_marginEnd="@dimen/default_spacing"
        android:layout_marginBottom="@dimen/default_spacing"
        android:background="@drawable/bubble_background"
        android:backgroundTint="?colorSecondary"
        android:elevation="0dp"
        android:fontFamily="@font/google_sans_bold"
        android:stateListAnimator="@null"
        android:text="@string/action_no"
        android:textColor="?colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/prompt_button_yes"
        app:layout_constraintTop_toBottomOf="@id/prompt_subtitle" />
</androidx.constraintlayout.widget.ConstraintLayout>