<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Koler.Call.Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/incoming_to_active_scene"
    tools:context=".ui.call.CallActivity">

    <!-- call timer -->
    <Chronometer
        android:id="@+id/call_chronometer"
        style="@style/Koler.Call.Text.Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_spacing"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- call status -->
    <TextView
        android:id="@+id/call_state_text"
        style="@style/Koler.Call.Text.Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_chronometer"
        tools:text="@string/call_status_incoming" />

    <!-- caller image -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/call_image"
        android:layout_width="@dimen/image_size_big"
        android:layout_height="@dimen/image_size_big"
        android:layout_marginEnd="@dimen/default_spacing_big"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/call_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/call_name_text"
        app:shapeAppearanceOverlay="@style/Koler.Image.Profile"
        tools:src="@drawable/ic_account_circle_black_24dp"
        tools:visibility="visible" />

    <!-- caller name -->
    <TextView
        android:id="@+id/call_name_text"
        style="@style/Koler.Call.Text.Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_spacing_big"
        android:layout_marginTop="@dimen/default_spacing_big"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_state_text"
        tools:text="John Baba" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/call_actions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_spacing"
        android:layout_marginEnd="@dimen/default_spacing"
        android:layout_marginBottom="@dimen/default_spacing_big"
        app:flow_verticalBias="1"
        app:layout_constraintBottom_toTopOf="@id/call_reject_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_name_text"
        tools:layout="@layout/call_actions" />

    <!-- answer button -->
    <com.chooloo.www.koler.ui.widgets.IconButton
        android:id="@+id/call_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_spacing"
        android:backgroundTint="@color/green_background"
        android:contentDescription="@string/content_description_answer_button"
        android:tint="@color/green_foreground"
        app:borderWidth="0dp"
        app:fabCustomSize="70dp"
        app:icon="@drawable/ic_call_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="36dp" />

    <!-- hangup button -->
    <com.chooloo.www.koler.ui.widgets.IconButton
        android:id="@+id/call_reject_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_spacing"
        android:backgroundTint="@color/red_background"
        android:contentDescription="@string/content_description_reject_button"
        android:tint="@color/red_foreground"
        app:borderWidth="0dp"
        app:fabCustomSize="70dp"
        app:icon="@drawable/ic_call_end_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="36dp" />
</androidx.constraintlayout.motion.widget.MotionLayout>